# CV-LM

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
R/: RcppExports.R  checks.R  cvLM.R  data-utils.R  grid.search.R  model-stats.R  reg.table.R  string-format.R
man/: cv.lm.Rd  cv.ridge.Rd  cvLM-package.Rd  grid.search.Rd  par.cv.lm.Rd  par.cv.ridge.Rd  reg.table.Rd
src/: BaseFit.cpp  CV-Deterministic-OLS-Fit.h  CV-Deterministic-Ridge-Fit.h  CV-OLS-Fit.cpp  CV-OLS-Fit.h  CV-Ridge-Fit.cpp  CV-Ridge-Fit.h  CV-Stochastic-Worker.h  CV-Stochastic-WorkerModel.cpp  CV-Stochastic-WorkerModel.h  CV-Utils-utils.cpp  CV-Utils-utils.h  CV-Worker.h  CV-WorkerModel.cpp  CV-WorkerModel.h  CV-WorkerModelFactory.cpp  CV-WorkerModelFactory.h  CV-engine.h  CV-utils.cpp  CV-utils.h  CVWorker.cpp  CVWorker.h  CenteringBuffers.h  Constants.h  ConstexprOptional.h  DeterministicGridWorker.cpp  DeterministicWorker.cpp  Enums-enums.h  Enums.h  FUNScvLM.cpp  FUNScvLM.h  Grid-Deterministic-Worker.cpp  Grid-Deterministic-Worker.h  Grid-Deterministic-WorkerModel.h  Grid-Deterministic-WorkerPolicy.cpp  Grid-Deterministic-WorkerPolicy.h  Grid-Generator.cpp  Grid-Generator.h  Grid-Internal.h  Grid-LambdaCV.h  (+49 more)
src/cv/: Worker.cpp  engineOLS.cpp  engineRidge.cpp  utils.cpp
src/grid/: hold.cpp
src/include/: BaseFit.h  CVWorker.h  DeterministicGridWorker.h  (+12 more)
src/tests/: CMakeLists.txt  tests.cpp
tests/: boot-ols-check.R  centered-correction.R  grid-cv-match.R  helpers.R  interface-consistency-check.R  ridge-reduce-ols.R  tests.R  testthat.R  thread-invariance.R
(+4 files in other folders)
